--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,8 +17,8 @@ tauri-build = { version = "1.4.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.4.0", features = [] }
-mongodb = { version = "2.6.0", default-features = false, features = ["sync"]}
+tauri = { version = "1.4.0", features = ["dialog-open"] }
+mongodb = { version = "2.6.0", default-features = false, features = ["sync"] }
 futures = "0.3"
 
 
