--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.4.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.4.0", features = ["dialog-open"] }
+tauri = { version = "1.4.0", features = [ "shell-all", "dialog-open"] }
 mongodb = { version = "2.6.0", default-features = false, features = ["sync"] }
 futures = "0.3"
 
