--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
 	"type": "module",
 	"dependencies": {
 		"@tauri-apps/api": "^1.4.0",
-		"source-map-js": "^1.0.2"
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.27",
+		"source-map-js": "^1.0.2",
+		"tailwindcss": "^3.3.3"
 	}
 }
